--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
