--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,7 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage"],
   "icons": {
     "16": "img/icon-16.png",
     "32": "img/icon-32.png",
