--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,9 +2,10 @@
   "manifest_version": 3,
   "name": "tabs auto switcher using cron expression",
   "description": "Automatically switches tabs based on user-defined cron expressions",
-  "version": "1.0",
+  "version": "1.1",
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title": "Tabs Auto Switcher"
   },
   "permissions": ["storage"],
   "icons": {
